# base-for-fastapi-application

./: pyproject.toml
fastapi-application/: .env.template  main.py
fastapi-application/alembic/: env.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  users.py
fastapi-application/core/: config.py
fastapi-application/core/models/: __init__.py  base.py  db_helper.py  user.py
fastapi-application/core/schemas/: __init__.py  user.py
fastapi-application/crud/: users.py
fastapi-application/utils/: __init__.py
