[tool.poetry]
name = "basic-project"
version = "0.1.0"
description = ""
authors = ["AleksGin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
